--- a/Proy1/nbproject/project.properties
+++ b/Proy1/nbproject/project.properties
@@ -28,12 +28,14 @@ dist.jar=${dist.dir}/Proy1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.gson-2.2.2.jar=C:\\Users\\rodri\\Downloads\\gson-2.2.2.jar
+file.reference.itextpdf-5.4.0.jar=C:\\Users\\rodri\\Downloads\\itextpdf-5.4.0.jar
 file.reference.jfreechart-1.5.0.jar=C:\\Users\\rodri\\Downloads\\jfreechart-1.5.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.gson-2.2.2.jar}:\
-    ${file.reference.jfreechart-1.5.0.jar}
+    ${file.reference.jfreechart-1.5.0.jar}:\
+    ${file.reference.itextpdf-5.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
